--- a/src/app/pages/adoption/adoption.hbs
+++ b/src/app/pages/adoption/adoption.hbs
@@ -16,6 +16,8 @@
         <input name="utf8" type="hidden" value="✓" />
         <!-- This is our organization id -->
         <input type=hidden name="oid" value="00DU0000000Kwch">
+        <input type=hidden name="retURL" value="{{urlOrigin}}/adoption-confirmation">
+        <input type=hidden name="lead_source" value="OS Adoption Form">
     </div>
     <h2>Instructor/Administrator Contact Information</h2>
     <fieldset class="labeled-inputs">
