Correct adoption-confirmation copy
Updated header and sub-header text for adoption confirmation based on
documents in Google drive.

--- a/src/app/pages/adoption-confirmation/adoption-confirmation.hbs
+++ b/src/app/pages/adoption-confirmation/adoption-confirmation.hbs
@@ -1,9 +1,11 @@
 <style scoped>
     @import url(/app/pages/adoption-confirmation/adoption-confirmation.css);
 </style>
-<h1>Thank you for adopting an Openstax College textbook!</h1>
+<h1>Thank you for adopting OpenStax!</h1>
 <p class="subhead">
-    Spread the word about free, peer-reviewed textbooks from OpenStax College!
+    Our free digital textbooks and integrated resources are yours to use. You
+    are joining thousands of educators in providing greater access to quality
+    learning resources for your students.
 </p>
 <div>
     <p>
