--- a/src/app/pages/subjects/subjects.hbs
+++ b/src/app/pages/subjects/subjects.hbs
@@ -3,8 +3,15 @@
     @import url(https://fonts.googleapis.com/css?family=Lato:400,900);
 </style>
 <div class="subjects-page">
-    <header data-manager="page-description"></header>
+    <header data-manager="page-description">
+        <div class="container">
+        <h1>Open source. Peer-reviewed. 100% free. </h1>
+        <p>And backed by additional learning resources. Review our OpenStax textbooks and decide if they’re right for your course. Simple to adopt, free to use. We make it easy to improve student access to higher education.</p>
+        </div>
+    </header>
     <div class="feature-block">
+        <div class="container">
+
         <div class="blurb">
             <div class="title" data-manager="ds1-head"></div>
             <div class="text" data-manager="ds1-body"></div>
@@ -18,8 +25,9 @@
             <div class="text" data-manager="ds3-body"></div>
         </div>
     </div>
+    </div>
     <div class="button-row">
         <div class="filter-buttons"></div>
     </div>
-    <div class="books-by-category"></div>
+    <div class="books-by-category"><div class="container"></div></div>
 </div>
