--- a/src/app/pages/subjects/subjects.scss
+++ b/src/app/pages/subjects/subjects.scss
@@ -29,8 +29,8 @@ $text-black3: rgba(0, 0, 0, 0.54);
     h1 {
         font-weight: 900;
         color: color(gray);
-        font-size: 2rem;
-        text-align: center;
+        font-size: 3.8rem;
+        //text-align: center;
 
         @include desktop {
             font-size: 4.8rem;
@@ -41,17 +41,17 @@ $text-black3: rgba(0, 0, 0, 0.54);
     header {
         background: $page-top-gradient;
         font-size: large;
-        padding: 5rem 10rem;
-        text-align: center;
+        padding: 5rem 0rem;
+        //text-align: center;
 
         p {
-            position: absolute;
-            transform: scale3d(0,0,0);
-
-            @include desktop {
-                position: relative;
-                transform: scale3d(1,1,1);
-            }
+            // position: absolute;
+            // transform: scale3d(0,0,0);
+            //
+            // @include desktop {
+            //     position: relative;
+            //     transform: scale3d(1,1,1);
+            // }
         }
     }
 
@@ -77,8 +77,12 @@ $text-black3: rgba(0, 0, 0, 0.54);
     }
 
     .button-row {
-        display: flex;
+        display: none;
         justify-content: center;
+
+        @include desktop {
+            display: flex;
+        }
 
         .filter-buttons {
             background-color: $lightest-gray;
@@ -102,23 +106,42 @@ $text-black3: rgba(0, 0, 0, 0.54);
 
     .books-by-category {
         background-color: $light-gray;
-        padding: 5rem 10rem;
+        padding: 5rem 0rem;
 
         .subject {
             color: $text-black2;
             font-size: 120%;
             font-style: italic;
             font-weight: 500;
+            //padding-top: 1.5rem;
+            padding-bottom: 1.5rem;
         }
 
         .row-of-covers {
             display: flex;
-            justify-content: flex-start;
+            justify-content: space-between;
+            flex-flow: row wrap;
+
+            @include desktop {
+                justify-content: center;
+            }
         }
 
         .cover {
             cursor: pointer;
-            padding-right: 2rem;
+            //padding-right: 2rem;
+            padding-bottom: 1.5rem;
+            //width: 100%;
+            flex-basis: 48%;
+
+            @include tablet {
+                flex-basis: 30%;
+            }
+
+            @include desktop {
+                flex-basis: 18%;
+            }
+
 
             &.selected {
                 .tooltip {
@@ -131,7 +154,7 @@ $text-black3: rgba(0, 0, 0, 0.54);
             }
 
             > img {
-                width: 22rem;
+                width: 100%;
             }
         }
 
