--- a/src/styles/variables/responsive.scss
+++ b/src/styles/variables/responsive.scss
@@ -3,6 +3,9 @@ $breakpoints: (
     tablet: 768px
 );
 
+// boxed view 1200px
+$boxed-width: 120rem;
+
 @function breakpoints($breakpoint) {
     @if map-has-key($breakpoints, $breakpoint) {
         @return map-get($breakpoints, $breakpoint);
