Make color strips a component

--- a/src/app/pages/tos/tos.hbs
+++ b/src/app/pages/tos/tos.hbs
@@ -2,15 +2,7 @@
     @import url(/app/pages/tos/tos.css);
 </style>
 <div class="tos-page page">
-
-    <div class="strips">
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-    </div>
-
+    {{{strips}}}
     <main id="maincontent" class="boxed">
         <h1>Terms of Use</h1>
 
