--- a/src/app/pages/accessibility-statement/accessibility-statement.hbs
+++ b/src/app/pages/accessibility-statement/accessibility-statement.hbs
@@ -2,15 +2,7 @@
     @import url(/app/pages/accessibility-statement/accessibility-statement.css);
 </style>
 <div class="accessibility-page page">
-
-    <div class="strips">
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-    </div>
-
+    {{{strips}}}
     <main id="maincontent" class="boxed">
 
         <h1>Accessibility</h1>
