--- a/src/app/pages/license/license.hbs
+++ b/src/app/pages/license/license.hbs
@@ -2,15 +2,7 @@
     @import url(/app/pages/license/license.css);
 </style>
 <div class="license-page page">
-
-    <div class="strips">
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-    </div>
-
+    {{{strips}}}
     <main id="maincontent" class="boxed">
         <h1>Legal</h1>
         <h2 class="document-description">Frequently asked IP (Intellectual Property) and legal questions</h2>
