--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -97,49 +97,9 @@ a {
 
 }
 
-//strips
-
-.strips {
-    display: flex;
-    flex-flow: row nowrap;
-    height: 1vw;
-    max-height: 1rem;
-    align-items: stretch;
-    margin-bottom: 4rem;
-
-    span {
-        flex: 1 0;
-
-        &:first-child {
-            flex-grow: 2.8;
-            background-color: color(orange);
-        }
-
-        &:nth-child(2) {
-            flex-grow: 1.2;
-            background-color: color(blue);
-        }
-
-        &:nth-child(3) {
-            flex-grow: 0.8;
-            background-color: color(red);
-        }
-
-        &:nth-child(4) {
-            flex-grow: 1.6;
-            background-color: color(yellow);
-        }
-
-        &:last-child {
-            flex-grow: 1.2;
-            background-color: color(cyan);
-        }
-    }
-
-}
-
 @import 'components/buttons';
+@import 'components/forms';
 @import 'components/headers';
 @import 'components/responsive';
 @import 'components/social';
-@import 'components/forms';
+@import 'components/strips';
