Make component for bucket
Split out bucket scss
Made buckets create Bucket views onRender

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -97,6 +97,7 @@ a {
 
 }
 
+@import 'components/bucket';
 @import 'components/buttons';
 @import 'components/forms';
 @import 'components/headers';
