Do basic styling on forms
Styled the adoption form in particular, but mostly using the
forms.scss file so that the styling applied across all forms.

--- a/src/app/pages/adoption/adoption.hbs
+++ b/src/app/pages/adoption/adoption.hbs
@@ -1,142 +1,144 @@
-<h1>OpenStax College Adoption Form</h1>
-<p>
-    Future funding from the <a href="/about">generous foundation donors</a> who
-    support our work is based on the number of instructors who adopt and the impact
-    our resources have on students. Please complete the form below to help us
-    demonstrate how OpenStax College textbooks are making education more accessible!
-</p>
-<p>
-    Not using OpenStax College yet? Please complete the OpenStax
-    <a href="/adoption_interests">interest form</a> so we may send you the
-    information you need.
-</p>
+<style scoped>
+    @import url(/app/pages/adoption/adoption.css);
+</style>
+<div class="text-content">
+    <h1>OpenStax College Adoption Form</h1>
+    <p class="subhead">
+        Future funding from the <a href="/about">generous foundation donors</a> who
+        support our work is based on the number of instructors who adopt and the impact
+        our resources have on students. Please complete the form below to help us
+        demonstrate how OpenStax College textbooks are making education more accessible!
+    </p>
+    <p class="subhead">
+        Not using OpenStax College yet? Please complete the OpenStax
+        <a href="/adoption_interests">interest form</a> so we may send you the
+        information you need.
+    </p>
+</div>
 <form accept-charset="UTF-8" class="new_adoption"
  action="https://www.salesforce.com/servlet/servlet.WebToLead?encoding=UTF-8" method="post">
-    <div>
-        <input name="utf8" type="hidden" value="✓" />
-        <!-- This is our organization id -->
-        <input type=hidden name="oid" value="00DU0000000Kwch">
-        <input type=hidden name="retURL" value="{{urlOrigin}}/adoption-confirmation">
-        <input type=hidden name="lead_source" value="OS Adoption Form">
+    <div class="text-content">
+        <div>
+            <input name="utf8" type="hidden" value="✓" />
+            <!-- This is our organization id -->
+            <input type=hidden name="oid" value="00DU0000000Kwch">
+            <input type=hidden name="retURL" value="{{urlOrigin}}/adoption-confirmation">
+            <input type=hidden name="lead_source" value="OS Adoption Form">
+        </div>
+        <h2>Instructor/Administrator Contact Information</h2>
+        <div class="labeled-inputs two-column">
+            <fieldset class="column">
+                <label>
+                    <span>First name</span>
+                    <input name="first_name" type="text" required />
+                </label>
+                <label>
+                    <span>Last name</span>
+                    <input name="last_name" type="text" required />
+                </label>
+                <label>
+                    <span>School name</span>
+                    <input name="company" type="text" required />
+                </label>
+            </fieldset>
+            <fieldset class="column">
+                <label>
+                    <span>School url</span>
+                    <input name="URL" type="text" required />
+                </label>
+                <label>
+                    <span>Email address</span>
+                    <input name="email" pattern="[^@]+@([^@\.]+\.)+[^@\.]+" type="text" required />
+                </label>
+                <label>
+                    <span>Phone number</span>
+                    <input name="phone" type="text" required />
+                </label>
+            </fieldset>
+        </div>
     </div>
-    <h2>Instructor/Administrator Contact Information</h2>
-    <fieldset class="labeled-inputs">
-        <label>
-            <span>First name</span>
-            <input name="first_name" type="text" required />
-        </label>
-        <label>
-            <span>Last name</span>
-            <input name="last_name" type="text" required />
-        </label>
-        <label>
-            <span>School name</span>
-            <input name="company" type="text" required />
-        </label>
-        <label>
-            <span>School url</span>
-            <input name="URL" type="text" required />
-        </label>
-        <label>
-            <span>Email address</span>
-            <input name="email" pattern="[^@]+@([^@\.]+\.)+[^@\.]+" type="text" required />
-        </label>
-        <label>
-            <span>Phone number</span>
-            <input name="phone" type="text" required />
-        </label>
+{{{strips}}}
+<div class="text-content labeled-inputs two-column book-info">
+    <fieldset id="primary-book" class="column">
     </fieldset>
+    <fieldset class="column">
+        <p class="question">
+            Which partners may we share your information with so they may contact you
+            about additional resources supporting the OpenStax College books?
+        </p>
+        <fieldset class="labeled-buttons">
+            <label>
+                <input name="00NU00000055spm" type="checkbox"
+                 value="Online homework providers">
+                Online homework providers
+            </label>
+            <label>
+                <input name="00NU00000055spm" type="checkbox"
+                 value="Courseware providers">
+                Courseware providers
+            </label>
+            <label>
+                <input name="00NU00000055spm" type="checkbox"
+                 value="Print custom editions">
+                Print custom editions
+            </label>
+        </fieldset>
 
-<h2>Textbook Adoption</h2>
-<fieldset id="primary-book">
-</fieldset>
+        <p class="question">Are you interested in being featured in our newsletter as a Textbook Hero?</p>
+        <select name="00NU00000055sq6">
+            <option value="1">Yes</option>
+            <option value="0">No</option>
+        </select>
 
-<p>
-    Which partners may we share your information with so they may contact you
-    about additional resources supporting the OpenStax College books?
-</p>
-<fieldset class="labeled-buttons">
-    <label>
-        <input name="00NU00000055spm" type="checkbox"
-         value="Online homework providers">
-        Online homework providers
-    </label>
-    <label>
-        <input name="00NU00000055spm" type="checkbox"
-         value="Courseware providers">
-        Courseware providers
-    </label>
-    <label>
-        <input name="00NU00000055spm" type="checkbox"
-         value="Print custom editions">
-        Print custom editions
-    </label>
-</fieldset>
+        <p class="question">
+            OpenStax and Rice University researchers conduct several pilots and research
+            studies. May we contact you about opportunities to participate in future
+            pilots or studies?
+        </p>
+        <select name="00NU00000055sqB">
+            <option value="1">Yes</option>
+            <option value="0">No</option>
+        </select>
+        <!-- Doesn't look like Salesforce can store this information
+        <p>
+            Do you know of any other instructors using OpenStax College books? If so, would
+            you be willing to provide their contact information below?
+        </p>
+        <fieldset class="labeled-inputs">
+            <label>
+                <span>First name</span>
+                <input name="adoption[hint_first_name]" type="text">
+            </label>
+            <label>
+                <span>Last name</span>
+                <input name="adoption[hint_last_name]" type="text">
+            </label>
+            <label>
+                <span>Email address</span>
+                <input name="adoption[hint_email_address]" pattern="[^@]+@([^@\.]+\.)+[^@\.]+" type="text">
+            </label>
+            <label>
+                <span>Phone number</span>
+                <input name="adoption[hint_phone_number]" type="text">
+            </label>
+        </fieldset>
+        -->
 
-<p>Are you interested in being featured in our newsletter as a Textbook Hero?</p>
-<fieldset class="labeled-buttons">
-    <label>
-        <input checked="checked" name="00NU00000055sq6" type="radio" value="1">
-        Yes
-    </label>
-    <label>
-        <input name="00NU00000055sq6" type="radio" value="0">
-        No
-    </label>
-</fieldset>
+        <!-- Can't handle more than one book on a form
+        <h3>Have you adopted a second OpenStax College book?</h3>
+        <a class="toggle-section" href="#"></a>
+        <fieldset id="secondary-book">
+        </fieldset>
+        -->
 
-<p>
-    OpenStax and Rice University researchers conduct several pilots and research
-    studies. May we contact you about opportunities to participate in future
-    pilots or studies?
-</p>
-<fieldset class="labeled-buttons">
-    <label>
-        <input checked="checked" name="00NU00000055sqB" type="radio" value="1">
-        Yes
-    </label>
-    <label>
-        <input name="00NU00000055sqB" type="radio" value="0">
-        No
-    </label>
-</fieldset>
-<!-- Doesn't look like Salesforce can store this information
-<p>
-    Do you know of any other instructors using OpenStax College books? If so, would
-    you be willing to provide their contact information below?
-</p>
-<fieldset class="labeled-inputs">
-    <label>
-        <span>First name</span>
-        <input name="adoption[hint_first_name]" type="text">
-    </label>
-    <label>
-        <span>Last name</span>
-        <input name="adoption[hint_last_name]" type="text">
-    </label>
-    <label>
-        <span>Email address</span>
-        <input name="adoption[hint_email_address]" pattern="[^@]+@([^@\.]+\.)+[^@\.]+" type="text">
-    </label>
-    <label>
-        <span>Phone number</span>
-        <input name="adoption[hint_phone_number]" type="text">
-    </label>
-</fieldset>
--->
-
-<!-- Can't handle more than one book on a form
-<h3>Have you adopted a second OpenStax College book?</h3>
-<a class="toggle-section" href="#"></a>
-<fieldset id="secondary-book">
-</fieldset>
--->
-
-<div>
-    <label>
-        <p>Any feedback you'd like to share with us?</p>
-        <textarea cols="50" name="00NU00000056Rls" rows="6"></textarea>
-    </label>
+        <div>
+            <label>
+                <p class="question">Any feedback you'd like to share with us?</p>
+                <textarea cols="50" name="00NU00000056Rls" rows="6"></textarea>
+            </label>
+        </div>
+        <div class="cta">
+            <input name="commit" class="btn" type="submit" value="Submit" role="button" aria-disabled="false">
+        </div>
+    </fieldset>
 </div>
-
-<input name="commit" type="submit" value="Submit" role="button" aria-disabled="false">
