--- a/src/app/pages/adoption/book-info/book-info.hbs
+++ b/src/app/pages/adoption/book-info/book-info.hbs
@@ -1,4 +1,4 @@
-<p>OpenStax College textbook you are using: </p>
+<p>OpenStax College textbook you are using:</p>
 <select name="00NU00000053nzR" required>
     <option value="">Please Select</option>
     <option value="Algebra and Trigonometry">Algebra and Trigonometry</option>
@@ -23,67 +23,66 @@
     <option value="U.S. History">U.S. History</option>
 </select>
 <p>How are you using this title?</p>
-<fieldset class="labeled-buttons">
-    <label>
-        <input checked="checked" name="00NU00000055spw" type="radio" value="Fully adopted">
-        Fully adopted and using it. The students don't have to pay for a book.
-    </label>
-    <label>
-        <input name="00NU00000055spw" type="radio" value="Recommending book as an option">
+<select name="00NU00000055spw">
+    <option value="Fully adopted">Fully adopted and using it. The students
+        don't have to pay for a book.
+    </option>
+    <option value="Recommending book as an option">
         Recommending the book as an option. The students purchase a different book.
-    </label>
-</fieldset>
+    </option>
+</select>
 <p>Which partner resources are you using with the OpenStax College book?</p>
-<fieldset class="labeled-buttons require-one">
-    <legend class="validation-message">
-        Select at least one
-    </legend>
-    <label>
-        <input name="00NU0000005VmTu" type="checkbox" value="None">
-        None
-    </label>
-     <label>
-         <input name="00NU0000005VmTu" type="checkbox" value="Cerego">
-         Cerego
-     </label>
-     <label>
-         <input name="00NU0000005VmTu" type="checkbox" value="Courseweaver">
-         Courseweaver
-     </label>
-     <label>
-         <input name="00NU0000005VmTu" type="checkbox" value="Expert TA">
-         Expert TA
-     </label>
-     <label>
-         <input name="00NU0000005VmTu" type="checkbox" value="Lrnr">
-         Lrnr
-     </label>
-     <label>
-         <input name="00NU0000005VmTu" type="checkbox" value="Sapling Learning">
-         Sapling Learning
-     </label>
-     <label>
-         <input name="00NU0000005VmTu" type="checkbox" value="SimBio">
-         SimBio
-     </label>
-     <label>
-         <input name="00NU0000005VmTu" type="checkbox" value="WebAssign">
-         WebAssign
-     </label>
-     <label>
-         <input name="00NU0000005VmTu" type="checkbox" value="Wiley Plus">
-         Wiley Plus
-     </label>
-     <label>
-         <input name="00NU0000005VmTu" type="checkbox" value="XYZ Homework">
-         XYZ Homework
-     </label>
-   <label>
-       <input class="other" name="other" type="checkbox" value="other">
-       Other
-       <input name="00NU0000005Vls8" type="text">
-   </label>
-</fieldset>
+<div class="labeled-buttons require-one two-column">
+    <div class="column">
+        <label>
+            <input name="00NU0000005VmTu" type="checkbox" value="None">
+            None
+        </label>
+         <label>
+             <input name="00NU0000005VmTu" type="checkbox" value="Cerego">
+             Cerego
+         </label>
+         <label>
+             <input name="00NU0000005VmTu" type="checkbox" value="Courseweaver">
+             Courseweaver
+         </label>
+         <label>
+             <input name="00NU0000005VmTu" type="checkbox" value="Expert TA">
+             Expert TA
+         </label>
+         <label>
+             <input name="00NU0000005VmTu" type="checkbox" value="Lrnr">
+             Lrnr
+         </label>
+         <label>
+             <input name="00NU0000005VmTu" type="checkbox" value="Sapling Learning">
+             Sapling Learning
+         </label>
+     </div>
+     <div class="column">
+         <label>
+             <input name="00NU0000005VmTu" type="checkbox" value="SimBio">
+             SimBio
+         </label>
+         <label>
+             <input name="00NU0000005VmTu" type="checkbox" value="WebAssign">
+             WebAssign
+         </label>
+         <label>
+             <input name="00NU0000005VmTu" type="checkbox" value="Wiley Plus">
+             Wiley Plus
+         </label>
+         <label>
+             <input name="00NU0000005VmTu" type="checkbox" value="XYZ Homework">
+             XYZ Homework
+         </label>
+       <label>
+           <input class="other" name="other" type="checkbox" value="other">
+           Other
+           <input name="00NU0000005Vls8" class="short" type="text">
+       </label>
+   </div>
+</div>
 <p>
     Approximately how many students in your classes will be using this book per
     semester?
