--- a/src/app/pages/comp-copy/comp-copy.hbs
+++ b/src/app/pages/comp-copy/comp-copy.hbs
@@ -1,7 +1,7 @@
 <style scoped>@import url(/app/pages/comp-copy/comp-copy.css);</style>
 <h1>Request an iBooks Complimentary Copy</h1>
 <div class="comp-copy">
-    <div class="book-blurb">
+    <div class="subhead">
         <p>
             All instructors with a verified instructor account can receive an
             iBooks comp copy of their book of choice.
