--- a/src/app/pages/comp-copy/comp-copy.scss
+++ b/src/app/pages/comp-copy/comp-copy.scss
@@ -5,6 +5,11 @@
         flex: 1 100%;
     }
 
+    .subhead {
+        font-size: 1.7rem;
+        font-weight: 400;
+    }
+
     img {
         min-height: 20rem;
         min-width: 15rem;
@@ -14,13 +19,5 @@
         border: thin solid color(neutral-light);
         margin: 1rem;
         padding: 1rem;
-    }
-
-    [type="submit"] {
-        background-color: color(primary);
-        border: 0;
-        color: color(neutral-lightest);
-        font-size: 1.7rem;
-        padding: 1rem 2rem;
     }
 }
