--- a/src/app/pages/details/details.hbs
+++ b/src/app/pages/details/details.hbs
@@ -49,7 +49,7 @@
                 </footer>
             </blockquote>
         </div>
-        <section class="resources block">
+        <section id="resources" class="resources block">
             <h1>Resources</h1>
             <p>
                 Access doesn't end with the book. OpenStax has compiled additional
@@ -115,7 +115,7 @@
                 <div id="all-authors">
                 </div>
             </section>
-            <section class="errata">
+            <section id="errata" class="errata">
                 <h1>Errata</h1>
                 <p>
                     All OpenStax textbooks undergo a rigorous review process. However, like
