--- a/src/app/components/shell/footer/footer.hbs
+++ b/src/app/components/shell/footer/footer.hbs
@@ -44,28 +44,17 @@
     <div class="social">
         <ul>
             <li>
-                <a class="btn btn-focus-yellow btn-social facebook"
-                   href="https://facebook.com/sharer/sharer.php?u={{share.url}}">
+                <a class="btn btn-focus-yellow btn-social facebook" href="https://www.facebook.com/openstax" title="facebook">
                     Facebook
                 </a>
             </li>
             <li>
-                <a class="btn btn-focus-yellow btn-social twitter"
-                   href="https://twitter.com/share?
-                         url={{share.url}}&amp;
-                         text={{share.title}}&amp;
-                         via={{share.via}}">
+                <a class="btn btn-focus-yellow btn-social twitter" href="https://twitter.com/openstax" title="twitter">
                     Twitter
                 </a>
             </li>
             <li>
-                <a class="btn btn-focus-yellow btn-social linkedin"
-                   href="https://www.linkedin.com/shareArticle?
-                         mini=true&amp;
-                         url={{share.url}}&amp;
-                         title={{share.title}}&amp;
-                         summary={{share.summary}}&amp;
-                         source=">
+                <a class="btn btn-focus-yellow btn-social linkedin" href="https://www.linkedin.com/company/openstax" title="linkedin">
                     LinkedIn
                 </a>
             </li>
